PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2016, PHP 5.6.21

31 Marc 2016, PHP 5.6.20

- CLI Server:
  . Fixed bug #69953 (Support MKCALENDAR request method). (Christoph)

- Core:
  . Fixed bug #71596 (Segmentation fault on ZTS with date function
    (setlocale)). (Anatol)

- Curl:
  . Fixed bug #71694 (Support constant CURLM_ADDED_ALREADY). (mpyw)

- Date:
  . Fixed bug #71635 (DatePeriod::getEndDate segfault). (Thomas Punt)

- ODBC:
  . Fixed bug #47803, #69526 (Executing prepared statements is succesfull only
    for the first two statements). (einavitamar at gmail dot com, Anatol)

- PDO_DBlib:
  . Bug #54648 (PDO::MSSQL forces format of datetime fields).
    (steven dot lambeth at gmx dot de, Anatol)

- Phar:
  . Fixed bug #71625 (Crash in php7.dll with bad phar filename).
    (Anatol)
  . Fixed bug #71504 (Parsing of tar file with duplicate filenames causes
    memory leak). (Jos Elstgeest)

03 Mar 2016, PHP 5.6.19

- CLI server:
  . Fixed bug #71559 (Built-in HTTP server, we can download file in web by bug).
    (Johannes, Anatol)

- CURL:
  . Fixed bug #71523 (Copied handle with new option CURLOPT_HTTPHEADER crashes
    while curl_multi_exec). (Laruence)

- Date:
  . Fixed bug #68078 (Datetime comparisons ignore microseconds). (Willem-Jan
    Zijderveld)
  . Fixed bug #71525 (Calls to date_modify will mutate timelib_rel_time,
    causing date_date_set issues). (Sean DuBois)

- Fileinfo:
  . Fixed bug #71434 (finfo throws notice for specific python file). (Laruence)

- FPM:
  . Fixed bug #62172 (FPM not working with Apache httpd 2.4 balancer/fcgi
    setup). (Matt Haught, Remi)

- Opcache:
  . Fixed bug  #71584 (Possible use-after-free of ZCG(cwd) in Zend Opcache).
    (Yussuf Khalil)

- PDO MySQL:
  . Fixed bug #71569 (#70389 fix causes segmentation fault). (Nikita)

- Phar: